--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,7 +24,7 @@
 /* Mobile */
 @media screen and (max-width: 700px) {
   .main {
-    padding: 0 1rem 2rem;
+    padding: 2rem 1rem 2rem;
   }
 
   .section {
